example/src/snapshots/rust_sitter_example__repetitions__tests__repetitions_grammar-3.snap
---
source: example/src/repetitions.rs
expression: "grammar::parse(\"1, 2\", None)"
---
Ok(
    (
        NumberList {
            numbers: Spanned {
                value: [
                    Spanned {
                        value: 1,
                        span: (
                            0,
                            1,
                        ),
                    },
                    Spanned {
                        value: 2,
                        span: (
                            3,
                            4,
                        ),
                    },
                ],
                span: (
                    0,
                    4,
                ),
            },
        },
        EditTree,
    ),
)
