example/src/snapshots/rust_sitter_example__repetitions__tests__repetitions_grammar2-2.snap
---
source: example/src/repetitions.rs
expression: "grammar2::parse(\"1\", None)"
---
Ok(
    (
        NumberList {
            numbers: Spanned {
                value: [
                    Spanned {
                        value: 1,
                        span: (
                            0,
                            1,
                        ),
                    },
                ],
                span: (
                    0,
                    1,
                ),
            },
        },
        EditTree,
    ),
)
