example/src/snapshots/rust_sitter_example__repetitions__tests__repetitions_grammar3-2.snap
---
source: example/src/repetitions.rs
expression: "grammar3::parse(\"1,\", None)"
---
Ok(
    (
        NumberList {
            numbers: Spanned {
                value: [
                    Spanned {
                        value: Some(
                            1,
                        ),
                        span: (
                            0,
                            1,
                        ),
                    },
                ],
                span: (
                    0,
                    2,
                ),
            },
            metadata: 123,
        },
        EditTree,
    ),
)
