example/src/snapshots/rust_sitter_example__repetitions__tests__repetitions_grammar3-5.snap
---
source: example/src/repetitions.rs
expression: "grammar3::parse(\"1,, 2,\", None)"
---
Ok(
    (
        NumberList {
            numbers: Spanned {
                value: [
                    Spanned {
                        value: Some(
                            1,
                        ),
                        span: (
                            0,
                            1,
                        ),
                    },
                    Spanned {
                        value: Some(
                            2,
                        ),
                        span: (
                            4,
                            5,
                        ),
                    },
                ],
                span: (
                    0,
                    6,
                ),
            },
            metadata: 123,
        },
        EditTree,
    ),
)
