example/src/snapshots/rust_sitter_example__repetitions__tests__repetitions_grammar3.snap
---
source: example/src/repetitions.rs
expression: "grammar3::parse(\"\", None)"
---
Ok(
    (
        NumberList {
            numbers: Spanned {
                value: [],
                span: (
                    0,
                    0,
                ),
            },
            metadata: 123,
        },
        EditTree,
    ),
)
